--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,7 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Movinderproject"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Match"></activity>
+        <activity
+            android:name=".testAPI"
+            android:exported="false" />
+        <activity android:name=".Match" />
         <activity android:name=".update_profile" />
         <activity android:name=".Register" />
         <activity android:name=".MainActivity">
