--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Movinderproject"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Match"></activity>
+        <activity
+            android:name=".Messagerie"
+            android:exported="false" />
+        <activity
+            android:name=".ConversationView"
+            android:exported="false" />
+        <activity android:name=".Match" />
         <activity android:name=".update_profile" />
         <activity android:name=".Register" />
         <activity android:name=".MainActivity">
@@ -25,4 +31,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
