FIN DU PROJET : J'ai oublié de commit la fin du projet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Movinderproject"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".LeMatch"
+            android:exported="false" />
+        <activity
             android:name=".Messagerie"
             android:exported="false" />
         <activity
