--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Jan 25 14:17:06 CET 2022
+#Fri Feb 04 22:38:33 GMT+01:00 2022
 distributionBase=GRADLE_USER_HOME
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.7.1-bin.zip
-distributionPath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.4-rc-2-bin.zip
 zipStorePath=wrapper/dists
+classpath='com.android.tools.build\:gradle\:4.0.1'distributionPath\=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
